--- a/layouts/section/projects.html
+++ b/layouts/section/projects.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<h1>PROJECTS</h1>
+<h1 class="page__title">{{ .Title }}</h1>
 
 <section class="page wrap" aria-labeldyby="page-title" aria-describedby="page-desc">
   <nav id="post-nav" class="post-nav" role="navigation">
