--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,6 +22,13 @@ p > code {
   border-radius: .3rem;
 }
 
+blockquote {
+  border-left: 3px solid var(--color-accent-primary);
+  padding: 1rem 1.5rem;
+  font-size: 1.1em;
+  font-family: monospace;
+}
+
 .side-by-side {
   display: flex;
   flex-direction: row;
