Add pixelart section

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -256,6 +256,13 @@ figcaption p {
 
 }
 
+.image-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
 /** Highliht styles */
 pre { margin: 0 }
 /**
