--- a/layouts/_default/pixelart.html
+++ b/layouts/_default/pixelart.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <section class="a11y-page-single" aria-labelledby="page-title" aria-describedby="page-desc">
     <header class="a11y-page-single__header">
-      <h2 id="page-title">{{ .Title }}</h2>
+      <h1 id="page-title" class="page__title">{{ .Title }}</h1>
       <hr>
     </header>
     <div class="a11y-page-single__content" id="page-desc">
