--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -68,21 +68,41 @@ body.homepage {
 }
 
 .site-header {
-  grid-column: 1 / 3;
+  grid-column: 1 / 13;
   grid-row: 1 / 6;
   padding: 2rem 0 2rem 2rem;
 }
 
 .content {
-  grid-column: 3 / 13;
+  grid-column: 2 / 12;
+  grid-row: 4 / 6;
   padding: 2rem;
 }
 
-.avatar-header {
-  max-width: 100%;
-  border-radius: 50%;
-  display: block;
+details {
+  position: relative;
 }
+
+nav#TableOfContents {
+  position: absolute;
+  top: 1.75em;
+  left: 0;
+  background: #fff;
+  box-shadow: 0.15em 0.15em 0 #666;
+  border: 1px solid #000;
+  padding: 1rem 2rem;
+}
+
+nav#TableOfContents ul {
+  padding: 0;
+  list-style: none;
+}
+
+nav#TableOfContents li ul { 
+  padding-left: 1em;
+  list-style: square;
+}
+
 
 @media all and (max-width: 50rem) {
   .site-header,
@@ -96,8 +116,9 @@ body.homepage {
 
 .a11y-nav-main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
+    justify-content: space-around;
     list-style: none;
     padding-left: 0;
 }
@@ -105,7 +126,7 @@ body.homepage {
 .a11y-nav-main__nav-item {
   font-size: 1.25rem;
 }
-.a11y-nav-main__nav-item,
+
 .a11y-nav-main__nav-item a {
   display: block;
   width: 100%;
@@ -120,7 +141,6 @@ body.homepage {
 
 .a11y-nav-main__nav-item.active a {
   border: none;
-  background: var(--color-accent-secondary);
   color: var(--color-accent-secondary-fg);
   padding-left: 1rem;
 }
@@ -128,6 +148,19 @@ body.homepage {
 .nav__trigger {
   display: none;
 }
+
+.a11y-nav-main__nav-item__icon,
+.a11y-nav-main__nav-item__label {
+  padding: 1rem;
+}
+
+.a11y-nav-main__nav-item.active .a11y-nav-main__nav-item__label,
+.a11y-nav-main__nav-item:hover .a11y-nav-main__nav-item__label,
+.a11y-nav-main__nav-item.active .a11y-nav-main__nav-item__icon,
+.a11y-nav-main__nav-item:hover .a11y-nav-main__nav-item__icon {
+  border-bottom: .25em solid var(--color-accent-secondary);
+}
+
 
 figure {
   margin-left: -2rem;
@@ -202,7 +235,7 @@ figcaption p {
 @media all and (max-width: 50rem) {
 
   .content {
-    grid-row: 1;
+    grid-row: 5;
   }
 
   .a11y-site__description {
@@ -213,29 +246,14 @@ figcaption p {
     left: 2%;
     top: 1rem;
   }
-  nav.a11y-nav-main__wrap:not(.open) {
-    display: none;
+
+  .a11y-nav-main {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
-  nav.a11y-nav-main__wrap.open {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #fff;
-    padding: 4rem 2rem;
-    text-align: center;
-    height: 100vh;
-    z-index: 999;
-  }
   .nav__trigger {
-    display: block;
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-    font-size: 1.25rem;
-    z-index: 1000;
+    display: none;
   }
   nav.a11y-nav-main__wrap.open a {
     border-bottom: 1px solid currentColor;
@@ -272,7 +290,7 @@ pre { margin: 0 }
 /* Background */ .chroma { background-color: #f0f0f0 }
 /* Error */ .chroma .ss4 {  }
 /* LineHighlight */ .chroma .hl { background-color: #ffffcc; display: block; width: 100% }
-/* LineNumbers */ .chroma .ln { ; margin-right: 0.4em; padding: 0 0.4em 0 0.4em; }
+/* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em; }
 /* Keyword */ .chroma .s3e8 { color: #007020; font-weight: bold }
 /* KeywordPseudo */ .chroma .s3ec { color: #007020 }
 /* KeywordType */ .chroma .s3ee { color: #902000 }
