--- a/themes/next/layouts/partials/footer.html
+++ b/themes/next/layouts/partials/footer.html
@@ -18,3 +18,7 @@
 {{ if ($.Page.Scratch.Get "include_codepen") "true" }}
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 {{ end }}
+
+{{ if ($.Page.Scratch.Get "include_mastodon") "true" }}
+<script src="https://mastodon.social/embed.js" async="async"></script>
+{{ end }}
