--- a/themes/next/static/css/a11y.base.css
+++ b/themes/next/static/css/a11y.base.css
@@ -249,7 +249,8 @@ body.page-settings--open .page-settings {
   box-shadow: 0.15em 0.15em 0 #666;
 }
 
-.a11y__btn:hover {
+.a11y__btn:hover,
+.a11y__btn.active {
   background: #000;
   color: #fff;
   cursor: pointer;
