--- a/layouts/shortcodes/sidebyside.html
+++ b/layouts/shortcodes/sidebyside.html
@@ -1,4 +1,3 @@
 <section class="side-by-side">
-  <div class="left">{{ .Get "right" | safeHTML }}</div>
-  <div class="right">{{ .Get "left" | safeHTML }}</div>
+  {{ .Inner }}
 </section>
